[gd_scene load_steps=5 format=3 uid="uid://coklokvg6mem2"]

[ext_resource type="Script" uid="uid://bvdq4sn7w35b4" path="res://Scripts/Shop/item_script.gd" id="1_qvph8"]
[ext_resource type="Texture2D" uid="uid://fx6vipkd6jt3" path="res://icon.svg" id="2_wiu1c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4oje"]
size = Vector2(33, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8fj8s"]
size = Vector2(112, 108)

[node name="Item" type="Node2D" groups=["player"]]
z_index = 1
z_as_relative = false
script = ExtResource("1_qvph8")
can_be_upgraded = false
is_boost = true
damage_boost = 5
health_boost = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 3.14131
scale = Vector2(0.51, 0.51)
texture = ExtResource("2_wiu1c")

[node name="Area2D - Tile Collsion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Tile Collsion"]
position = Vector2(-2.5, 2)
shape = SubResource("RectangleShape2D_a4oje")

[node name="Area2D - Mouse Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Mouse Collision"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_8fj8s")

[node name="Level" type="Label" parent="."]
offset_left = -25.0
offset_top = 39.0
offset_right = 29.0
offset_bottom = 62.0
text = "Level 0"

[connection signal="area_entered" from="Area2D - Tile Collsion" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D - Tile Collsion" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_exited" from="Area2D - Tile Collsion" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Area2D - Mouse Collision" to="." method="_on_area_2d__mouse_collision_mouse_entered"]
[connection signal="mouse_exited" from="Area2D - Mouse Collision" to="." method="_on_area_2d__mouse_collision_mouse_exited"]
